positioning fixed and filters collapsable

--- a/src/app.css
+++ b/src/app.css
@@ -4,8 +4,6 @@ body {
 }
 
 .items {
-  margin-top: 27vh;
-  position: absolute;
   margin-left: 10vw;
   width: 80vw;
   text-align: center;
